--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 img{
-    width: 400px;
-    height: 450px;
+    text-align: justify;
+}
+h1{
+    text-align: justify;
+}
+h2{
+    text-align: justify;
 }
