--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .responsive{
-    width: 100%;
+    width: 50%;
     height: auto;
 }
 h1{
@@ -9,4 +9,10 @@ h1{
 h2{
     text-size-adjust: 2vw;
     text-align: center;
+}
+.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
 }
